changed color to red

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-<div style="color: blue;"> 
+<div style="color: red;"> 
         <h1 style="text-align: center;">Max Restaurant</h1> 
 </div>        
         
