updated header on home page

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
          <li style="display: inline; margin-right: 200px;"><a href="./contact.html">Contact</a></li>
     </ul>
 </nav>
-<div style="color: blue;">
-         <h1 style="text-align: center;">Welcome To Max Restaurant</h1>
+<div style="color: black;">
+         <h1 style="text-align: center;">Welcome To Max Restaurant Benue State</h1>
 </div>         
          <p style="text-align: center;">experience the best meal in the city of Abuja from us, we make your taste better and give you a satisfactory meal experience</p>
          <p style="text-align: center;">Our meals are freshly made with the best ingredient. Come and enjoy a great meal</p>
